--- a/templates/taxi/driver_list.html
+++ b/templates/taxi/driver_list.html
@@ -5,7 +5,7 @@
   <ul>
     {% for driver in driver_list %}
       <li>
-        {{ driver.first_name }} {{ driver.last_name }}, 
+        <a href={{ driver.get_absolute_url }}>{{ driver.first_name }} {{ driver.last_name }}</a> 
         License number: {{ driver.license_number }}
         <ul>
           {% for car in driver.cars.all %}
